# Pishock-Cyberpunk-2077

./: README.md  pyproject.toml
emitter/cet/mods/pishock_emitter/: config.example.json  init.lua
emitter/cet/mods/pishock_emitter/lib/: crypto_hmac.lua  events.lua  json_min.lua  outbox.lua
middleware/: README.md  __init__.py  app.py  config.example.yaml  config.py  file_ingest.py  pishock_http.py  policy.py  security.py  setup_wizard.py
middleware/tests/: __init__.py  test_default_mappings.py  test_event_flow.py  test_file_ingest.py  test_policy.py  test_signature.py
scripts/: setup_env.ps1  setup_env.sh
