[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberpunk-pishock-middleware"
version = "0.3.0"
description = "Local safety middleware for Cyberpunk events to PiShock"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pyyaml>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
middleware-setup = "middleware.setup_wizard:run_wizard"
middleware-file-ingest = "middleware.file_ingest:main"

[tool.pytest.ini_options]
pythonpath = ["."]
